apps/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: radarr
  ports:
    - port: 7879
      targetPort: 7879
      name: http
